sort ascending instead of descending (show oldest events first) properly iterate over multiple addresses changed sample data for the first event "Milford Phone Bank" to have multiple locations, multiple shifts and multiple tiers added toggle details text link fix date formatting for mobile

--- a/hfa.css
+++ b/hfa.css
@@ -66,9 +66,11 @@ i {
 h3.details-heading {
     margin-left: 10px;
     margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 .address {
+    margin-top: 15px;
     font-weight: bold;
 }
 
@@ -91,6 +93,7 @@ h3.details-heading {
 
     font-size: 18px;
     padding: 5px;
+    white-space: nowrap;
 }
 
 a.attend-button {
@@ -102,12 +105,20 @@ a.attend-button {
     margin-top: 15px;
     background-color: green;
     color: #fff;
-    border-radius: 3px;
 }
 
 .attend-button-div {
     margin: 10px 10px 10px 10px;
 
+}
+
+.shifts-tiers {
+    margin-left: 10px;
+    padding-bottom: 5px;
+}
+.toggle-details {
+    padding: 3px 3px 3px 3px;
+    color: #ffffff;
 }
 
 /* Media Query for small devices */
@@ -126,7 +137,7 @@ a.attend-button {
     }
 
     h3 {
-        font-size: 28;
+        font-size: 28px;
     }
 
     h1 {
@@ -137,7 +148,7 @@ a.attend-button {
 
     .attend-status {
         width: 100px;
-        font-size: 14;
+        font-size: 30px;
     }
 
 
@@ -149,7 +160,6 @@ a.attend-button {
 
 
     a.attend-button {
-        border-radius: 5px;
         text-align: left;
         font-weight: bold;
         padding: 5px 10px;
@@ -160,15 +170,11 @@ a.attend-button {
         border-radius: 3px;
     }
 
-    .attend-status {
-
-        font-size: 28px;
-
-    }
 
     .event-description {
         padding-left: 5px;
         padding-right: 5px;
+        margin-left: 5px;
     }
 
 
